[tool.poetry]
name = "printmark-classification"
version = "0.1.0"
description = ""
authors = ["citlali-trigos-raczkowski <cbtrigos@gmail.com>"]
readme = "README.md"
packages = [{include = "printmark_classification"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
