[tool.poetry]
name = "printmark-classification"
version = "0.1.0"
description = ""
authors = ["citlali-trigos-raczkowski <cbtrigos@gmail.com>"]
readme = "README.md"
packages = [{include = "printmark_classification"}]

[tool.poetry.dependencies]
python = "^3.8"
hereutil = "^0.1.3"
pandas = "^1.5.3"
seaborn = "^0.12.2"
pymysql = "^1.0.2"
keyring = "^23.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
